ingress_api.yml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: ingress-api
    namespace: api
    annotations: 
      kubernetes.io/ingress.class: "nginx"
  spec:
    rules:
    - http:
        paths:
        - path: /api/userprofile/    
          pathType: Prefix
          backend:
            service:
              name: userprofile
              port:
                number: 80
    - http:
        paths:
        - path: /api/poi/    
          pathType: Prefix
          backend:
            service:
              name: poi
              port:
                number: 80
    - http:
        paths:
        - path: /api/trips/    
          pathType: Prefix
          backend:
            service:
              name: trips
              port:
                number: 80
    - http:
        paths:
        - path: /api/user-java/    
          pathType: Prefix
          backend:
            service:
              name: userjava
              port:
                number: 80
    - http:
        paths:
        - path: /api/userjava/    
          pathType: Prefix
          backend:
            service:
              name: userjava
              port:
                number: 80
